--- a/ds_classes/CLASS-15/lending-data-assignment.ipynb
+++ b/ds_classes/CLASS-15/lending-data-assignment.ipynb
@@ -545,7 +545,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Aqdas Tanweer\\AppData\\Local\\Temp\\ipykernel_16068\\2443963970.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\Aqdas Tanweer\\AppData\\Local\\Temp\\ipykernel_6560\\2443963970.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  lending = lending.replace('-', ny.nan)\n"
      ]
     }
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "38b5cd57",
    "metadata": {},
    "outputs": [],
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "fdc89d18",
    "metadata": {},
    "outputs": [],
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "d6040cc3",
    "metadata": {},
    "outputs": [
@@ -1770,7 +1770,7 @@
        "[93 rows x 13 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1781,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "9e74f430",
    "metadata": {},
    "outputs": [],
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "89c58a1d",
    "metadata": {},
    "outputs": [],
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "31b4051f",
    "metadata": {},
    "outputs": [
@@ -1942,7 +1942,7 @@
        "      <th>89</th>\n",
        "      <td>USAA Svg. Bank</td>\n",
        "      <td>NV</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NR</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.251196</td>\n",
        "      <td>0.000000e+00</td>\n",
@@ -1958,7 +1958,7 @@
        "      <th>90</th>\n",
        "      <td>State Street Corp.</td>\n",
        "      <td>MA</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NR</td>\n",
        "      <td>0.048668</td>\n",
        "      <td>0.251196</td>\n",
        "      <td>3.184791e+06</td>\n",
@@ -1974,7 +1974,7 @@
        "      <th>91</th>\n",
        "      <td>E Trade Bk</td>\n",
        "      <td>VA</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NR</td>\n",
        "      <td>0.048668</td>\n",
        "      <td>0.251196</td>\n",
        "      <td>3.184791e+06</td>\n",
@@ -1990,7 +1990,7 @@
        "      <th>92</th>\n",
        "      <td>Charles Schwab Bk</td>\n",
        "      <td>NV</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NR</td>\n",
        "      <td>0.048668</td>\n",
        "      <td>0.251196</td>\n",
        "      <td>3.184791e+06</td>\n",
@@ -2006,7 +2006,7 @@
        "      <th>93</th>\n",
        "      <td>Third FS&amp;LA</td>\n",
        "      <td>OH</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NR</td>\n",
        "      <td>0.048668</td>\n",
        "      <td>0.251196</td>\n",
        "      <td>3.184791e+06</td>\n",
@@ -2024,18 +2024,18 @@
        "</div>"
       ],
       "text/plain": [
-       "          Name of Lending Institution HQ State  Rank  TA Ratio1  TBL Ratio1  \\\n",
-       "1               American Express Co.       NY      1   0.238290    0.999544   \n",
-       "2            First Citizens Banchares      NC      2   0.187393    0.490830   \n",
-       "3            Wintrust Financial Corp.      IL      3   0.168999    0.383561   \n",
-       "4                       Zions Bancorp      UT      4   0.117973    0.260577   \n",
-       "5             Synovus Financial Corp.      GA      5   0.162333    0.381387   \n",
-       "..                                ...      ...   ...        ...         ...   \n",
-       "89  USAA Svg. Bank                          NV     0   0.000000    0.251196   \n",
-       "90                State Street Corp.       MA      0   0.048668    0.251196   \n",
-       "91     E Trade Bk                           VA     0   0.048668    0.251196   \n",
-       "92     Charles Schwab Bk                    NV     0   0.048668    0.251196   \n",
-       "93     Third FS&LA                          OH     0   0.048668    0.251196   \n",
+       "          Name of Lending Institution HQ State Rank  TA Ratio1  TBL Ratio1  \\\n",
+       "1               American Express Co.       NY     1   0.238290    0.999544   \n",
+       "2            First Citizens Banchares      NC     2   0.187393    0.490830   \n",
+       "3            Wintrust Financial Corp.      IL     3   0.168999    0.383561   \n",
+       "4                       Zions Bancorp      UT     4   0.117973    0.260577   \n",
+       "5             Synovus Financial Corp.      GA     5   0.162333    0.381387   \n",
+       "..                                ...      ...  ...        ...         ...   \n",
+       "89  USAA Svg. Bank                          NV   NR   0.000000    0.251196   \n",
+       "90                State Street Corp.       MA    NR   0.048668    0.251196   \n",
+       "91     E Trade Bk                           VA   NR   0.048668    0.251196   \n",
+       "92     Charles Schwab Bk                    NV   NR   0.048668    0.251196   \n",
+       "93     Third FS&LA                          OH   NR   0.048668    0.251196   \n",
        "\n",
        "    Amount ($1,000)       Number   Lender Asset Size  Amount ($1,000).1  \\\n",
        "1      1.635004e+07  3.603226e+06                  2         16318089.0   \n",
@@ -2066,7 +2066,7 @@
        "[93 rows x 13 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "c0cedd19",
    "metadata": {},
    "outputs": [
@@ -2085,7 +2085,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Aqdas Tanweer\\AppData\\Local\\Temp\\ipykernel_16068\\3960201933.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\Aqdas Tanweer\\AppData\\Local\\Temp\\ipykernel_6560\\3960201933.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  lending['Rank'] = lending['Rank'].replace('NR', 0)\n"
      ]
     }
@@ -2096,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "7b2d3246",
    "metadata": {},
    "outputs": [
@@ -2361,7 +2361,7 @@
        "[93 rows x 13 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2372,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "480e2b25",
    "metadata": {},
    "outputs": [],
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "37d56675",
    "metadata": {},
    "outputs": [],
@@ -2394,7 +2394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "fc8ac56a",
    "metadata": {},
    "outputs": [
@@ -2431,12 +2431,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "id": "d5b4bd13",
    "metadata": {},
    "outputs": [],
    "source": [
     "lending.to_csv('lending_clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "beb9bf39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name of Lending Institution</th>\n",
+       "      <th>HQ State</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>TA Ratio1</th>\n",
+       "      <th>TBL Ratio1</th>\n",
+       "      <th>Amount ($1,000)</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Lender Asset Size</th>\n",
+       "      <th>Amount ($1,000).1</th>\n",
+       "      <th>Number .1</th>\n",
+       "      <th>Amount ($1,000).2</th>\n",
+       "      <th>Number .2</th>\n",
+       "      <th>CC Amount/TA1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>American Express Co.</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.238290</td>\n",
+       "      <td>0.999544</td>\n",
+       "      <td>1.635004e+07</td>\n",
+       "      <td>3.603226e+06</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16318089.0</td>\n",
+       "      <td>3603088.0</td>\n",
+       "      <td>31949.0</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>0.28000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>First Citizens Banchares</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.187393</td>\n",
+       "      <td>0.490830</td>\n",
+       "      <td>3.914507e+06</td>\n",
+       "      <td>1.177020e+05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>378394.0</td>\n",
+       "      <td>105081.0</td>\n",
+       "      <td>3536113.0</td>\n",
+       "      <td>12621.0</td>\n",
+       "      <td>0.02087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wintrust Financial Corp.</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.168999</td>\n",
+       "      <td>0.383561</td>\n",
+       "      <td>2.842793e+06</td>\n",
+       "      <td>1.368010e+05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>800526.0</td>\n",
+       "      <td>126455.0</td>\n",
+       "      <td>2042267.0</td>\n",
+       "      <td>10346.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Zions Bancorp</td>\n",
+       "      <td>UT</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.117973</td>\n",
+       "      <td>0.260577</td>\n",
+       "      <td>6.231770e+06</td>\n",
+       "      <td>5.261200e+04</td>\n",
+       "      <td>2</td>\n",
+       "      <td>526206.0</td>\n",
+       "      <td>32973.0</td>\n",
+       "      <td>5705564.0</td>\n",
+       "      <td>19639.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Synovus Financial Corp.</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.162333</td>\n",
+       "      <td>0.381387</td>\n",
+       "      <td>4.227168e+06</td>\n",
+       "      <td>2.267500e+04</td>\n",
+       "      <td>1</td>\n",
+       "      <td>539666.0</td>\n",
+       "      <td>9593.0</td>\n",
+       "      <td>3687502.0</td>\n",
+       "      <td>13082.0</td>\n",
+       "      <td>0.01000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>USAA Svg. Bank</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.251196</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>State Street Corp.</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.048668</td>\n",
+       "      <td>0.251196</td>\n",
+       "      <td>3.184791e+06</td>\n",
+       "      <td>2.164190e+05</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>E Trade Bk</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.048668</td>\n",
+       "      <td>0.251196</td>\n",
+       "      <td>3.184791e+06</td>\n",
+       "      <td>2.164190e+05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>Charles Schwab Bk</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.048668</td>\n",
+       "      <td>0.251196</td>\n",
+       "      <td>3.184791e+06</td>\n",
+       "      <td>2.164190e+05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>Third FS&amp;LA</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.048668</td>\n",
+       "      <td>0.251196</td>\n",
+       "      <td>3.184791e+06</td>\n",
+       "      <td>2.164190e+05</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02087</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>93 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Name of Lending Institution HQ State  Rank  TA Ratio1  TBL Ratio1  \\\n",
+       "1               American Express Co.       NY      1   0.238290    0.999544   \n",
+       "2            First Citizens Banchares      NC      2   0.187393    0.490830   \n",
+       "3            Wintrust Financial Corp.      IL      3   0.168999    0.383561   \n",
+       "4                       Zions Bancorp      UT      4   0.117973    0.260577   \n",
+       "5             Synovus Financial Corp.      GA      5   0.162333    0.381387   \n",
+       "..                                ...      ...   ...        ...         ...   \n",
+       "89  USAA Svg. Bank                          NV     0   0.000000    0.251196   \n",
+       "90                State Street Corp.       MA      0   0.048668    0.251196   \n",
+       "91     E Trade Bk                           VA     0   0.048668    0.251196   \n",
+       "92     Charles Schwab Bk                    NV     0   0.048668    0.251196   \n",
+       "93     Third FS&LA                          OH     0   0.048668    0.251196   \n",
+       "\n",
+       "    Amount ($1,000)       Number   Lender Asset Size  Amount ($1,000).1  \\\n",
+       "1      1.635004e+07  3.603226e+06                  2         16318089.0   \n",
+       "2      3.914507e+06  1.177020e+05                  1           378394.0   \n",
+       "3      2.842793e+06  1.368010e+05                  1           800526.0   \n",
+       "4      6.231770e+06  5.261200e+04                  2           526206.0   \n",
+       "5      4.227168e+06  2.267500e+04                  1           539666.0   \n",
+       "..              ...           ...                ...                ...   \n",
+       "89     0.000000e+00  1.000000e+00                  0                0.0   \n",
+       "90     3.184791e+06  2.164190e+05                  2                0.0   \n",
+       "91     3.184791e+06  2.164190e+05                  0                0.0   \n",
+       "92     3.184791e+06  2.164190e+05                  0                0.0   \n",
+       "93     3.184791e+06  2.164190e+05                  0                0.0   \n",
+       "\n",
+       "    Number .1  Amount ($1,000).2  Number .2  CC Amount/TA1  \n",
+       "1   3603088.0            31949.0      138.0        0.28000  \n",
+       "2    105081.0          3536113.0    12621.0        0.02087  \n",
+       "3    126455.0          2042267.0    10346.0        0.00000  \n",
+       "4     32973.0          5705564.0    19639.0        0.00000  \n",
+       "5      9593.0          3687502.0    13082.0        0.01000  \n",
+       "..        ...                ...        ...            ...  \n",
+       "89        1.0                0.0        0.0        0.02087  \n",
+       "90        0.0                0.0        0.0        0.00000  \n",
+       "91        0.0                0.0        0.0        0.02087  \n",
+       "92        0.0                0.0        0.0        0.02087  \n",
+       "93        0.0                0.0        0.0        0.02087  \n",
+       "\n",
+       "[93 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lending"
    ]
   }
  ],
